fix font-weight on mobile

--- a/styles/about.css
+++ b/styles/about.css
@@ -31,6 +31,9 @@
     margin: 1em 0 1em 0;
     font-weight: 700;
   }
+  .about--body {
+    font-weight: 400;
+  }
 }
 
 /****** IPAD / LAPTOP ******/
